--- a/light-highlighter/index.html
+++ b/light-highlighter/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
-<body>
+<body class="light-highlighter-popup">
     <div class="header">
         <h1>Light Highlighter</h1>
         <p>Double-click any highlight to remove it</p>
